# instawow

./: .envrc  .gitignore  CHANGELOG.rst  MANIFEST.in  README.md  README.rst  TODO.md  alembic.ini  flake.nix  my.shell.nix  noxfile.py  pyoxidizer.bzl  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements-test.txt  requirements.in  requirements.txt  setup.py  shell.nix  taplo.toml  tox.ini
.github/: ISSUE_TEMPLATE.rst  dependabot.yaml
.github/workflows/: ci.yaml  ci.yml  freeze.yaml  generate-pyox-cache.yaml  workflow-permissions-advisor.yaml
gui/: .gitignore  TODO.md  TODO.rst  package-lock.json  package.json  rollup.config.js  tsconfig.json
gui-webview/: .gitignore  linuxdeploy-plugin-zzzinstawowwebkit2gtk.sh  pyproject.toml
gui-webview/frontend/: .eslintrc.cjs  .eslintrc.js  index.html  package-lock.json  package.json  prettier.config.js  rollup.config.js  rollup.config.mjs  tsconfig.json
gui-webview/frontend/src/: addon.ts  api.ts  client.ts  constants.ts  custom-events.d.ts  global.d.ts  index.html  ipc.ts  main.ts  store.ts  svelte.d.ts
gui-webview/frontend/src/components/: Addon.svelte  AddonContextMenu.svelte  AddonList.svelte  AddonListNav.svelte  AddonStub.svelte  Alerts.svelte  App.svelte  ChangelogModal.svelte  ChangelogModalContents.svelte  ConfigEditor.svelte  ConfigModal.svelte  ConfigModalContents.svelte  ContextMenu.svelte  ContextMenuItem.svelte  Modal.svelte  ProfileConfigEditor.svelte  ProfileSwitcher.svelte  ProfileView.svelte  ProgressIndicator.svelte  Reconciler.svelte  Rereconciler.svelte  RollbackModal.svelte  RollbackModalContents.svelte  SearchOptionsModal.svelte  SearchOptionsModalContents.svelte  SvgIcon.svelte
gui-webview/frontend/src/components/context-menu/: ContextMenu.svelte
gui-webview/frontend/src/components/modal/: Modal.svelte
gui-webview/frontend/src/components/scss/: _modal.scss  _vars.scss  app.scss
gui-webview/frontend/src/stores/: alerts.ts  api.ts  index.ts  profiles.svelte.ts  profiles.ts
gui-webview/instawow_gui/: __main__.py  app.py  cef_adapter.py  json_rpc_server.py
gui-webview/instawow_gui/templates/: index.html
gui-webview/src/instawow_gui/: __init__.py  _plugin.py  app.py  json_rpc_server.py  webview2_adapter.py
gui-webview/src/instawow_gui_wrapper/: __main__.py
gui/src/: api.ts  client.ts  constants.ts  index.ts  ipc.ts  store.ts
instawow/: __init__.py  __main__.py  _custom_slpp.py  _import_wrapper.py  _models.py  _version.py  api.py  cli.py  config.py  constants.py  exceptions.py  json_rpc_server.py  manager.py  matchers.py  models.py  plugins.py  prompts.py  resolvers.py  results.py  utils.py  wa_updater.py
instawow-gui/: .gitignore  README.rst  linuxdeploy-plugin-zzzinstawowwebkit2gtk.sh  pyproject.toml
instawow-gui/frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts
instawow-gui/frontend/src/: api.ts  custome-events.d.ts  ipc.ts  main.ts
instawow-gui/frontend/src/components/: Addon.svelte  AddonContextMenu.svelte  AddonList.svelte  AddonListNav.svelte  AddonStub.svelte  Alerts.svelte  App.svelte  CentredPlaceholderText.svelte  ChangelogModalContents.svelte  ConfigModalContents.svelte  Profile.svelte  ProfileConfigEditor.svelte  ProfileView.svelte  ProgressIndicator.svelte  Reconciler.svelte  Rereconciler.svelte  RollbackModalContents.svelte  SearchOptionsModalContents.svelte  Spinner.svelte  SvgIcon.svelte
instawow-gui/frontend/src/components/context-menu/: ContextMenu.svelte  ContextMenuItem.svelte
instawow-gui/frontend/src/components/modal/: Modal.svelte
instawow-gui/frontend/src/components/scss/: _vars.scss  app.scss
instawow-gui/frontend/src/helpers/: duplicative-state.svelte.ts
instawow-gui/frontend/src/stores/: alerts.svelte.ts  api.svelte.ts  api.ts
instawow-gui/src/instawow_gui/: __init__.py  _app.py  _cli.py  _config.py  _json_rpc_server.py  _plugin.py  app.py  json_rpc_server.py
instawow-gui/src/instawow_gui/resources/: instawow_gui.icns
instawow-gui/src/instawow_gui_wrapper/: __main__.py
instawow-standalone/: .gitignore  pyoxidizer.bzl
instawow-weakaura-updater/: README.rst
instawow/migrations/: __init__.py  env.py  env.py.0
instawow/wa_templates/: CHANGELOG.md  README  WeakAurasCompanion.toc  data.lua  init.lua
nix/: my.dev-env.nix  my.framework-overlay.nix  my.nox-script.nix  my.pub-env.nix
pyinstaller-hooks/: hook-rapidfuzz.py
src/instawow/: __init__.py  __main__.py  _addon_hashing.py  _cli_prompts.py  _custom_slpp.py  _deferred_types.py  _github_auth.py  _http_cache_db.py  _import_wrapper.py  _logging.py  _progress_reporting.py  _version.py  _version_check.py  archives.py  cataloguer.py  cli.py  common.py  config.py  config_ctx.py  db.py  definitions.py  github_auth.py  http.py  http_ctx.py  manager.py  manager_ctx.py  matchers.py  models.py  pkg_db.py  pkg_management.py  pkg_models.py  plugins.py  progress_reporting.py  prompts.py  resolvers.py  results.py  shared_ctx.py  sync_ctx.py  utils.py  wa_updater.py  (+1 more)
src/instawow_wa_updater/: __init__.py  _cli.py  _config.py  _core.py  _custom_slpp.py  _plugin.py
tests/: conftest.py  install_coverage_hook.py  test__slpp.py  test__sources.py  test__version.py  test_addon_toc.py  test_archives.py  test_available_sources.py  test_catalogue_search.py  test_cli.py  test_cli_output.py  test_cli_usage.py  test_common.py  test_config.py  test_config_bound_ctx.py  test_github_oauth_flow.py  test_github_zip_parsing.py  test_host_resolution.py  test_json_rpc_api.py  test_manager.py  test_matchers.py  test_pkg_archives.py  test_pkg_management.py  test_resolvers.py  test_search.py  test_slpp.py  test_source__cfcore.py  test_source__curse.py  test_source__github.py  test_source__tukui.py  test_source__wowi.py  test_sources.py  test_utils.py  test_version.py  test_version_check.py  test_wa_updater.py  test_wa_updater_parser.py  test_wow_installations.py  test_ws_api.py
tests/_plugin/: instawow_test_plugin.py  pyproject.toml
tests/cassettes/: test_wa_updater.yaml
tests/fixtures/: base-catalogue-v5.compact.json  curse-addon--all.json  (+47 more)
type-stubs/: wcwidth.pyi
(+183 files in other folders)
