[build-system]
requires = ["briefcase @ git+https://github.com/layday/briefcase@instawow"]

[tool.briefcase]
project_name = "instawow-gui"
bundle = "org.instawow"
version = "0.0.0"
url = "https://github.com/layday/instawow"
license = "GNU General Public License v3 (GPLv3)"
author = "layday"
author_email = "layday@protonmail.com"

[tool.briefcase.app.instawow-gui-wrapper]
formal_name = "instawow-gui"
description = "GUI for the World of Warcraft add-on manager instawow"
icon = "src/instawow_gui/resources/instawow_gui"
sources = ["src/instawow_gui_wrapper"]
requires = [
  "..[gui]",
  "certifi",
  "toga @ git+https://github.com/beeware/toga@6510c11",
  "toga-core @ git+https://github.com/beeware/toga@6510c11#subdirectory=src/core",
  'toga-cocoa @ git+https://github.com/beeware/toga@6510c11#subdirectory=src/cocoa; sys_platform == "darwin"',
  'toga-gtk @ git+https://github.com/beeware/toga@6510c11#subdirectory=src/gtk; sys_platform == "linux"',
  'toga-winforms @ git+https://github.com/beeware/toga@6510c11#subdirectory=src/winforms; sys_platform == "win32"',
]

[tool.briefcase.app.instawow-gui-wrapper.macOS]
requires = [
  "std-nslog",
]
