[build-system]
requires = ["briefcase @ git+https://github.com/layday/briefcase@instawow"]

[tool.briefcase]
project_name = "instawow-gui"
bundle = "org.instawow"
version = "0.1.0"
url = "https://github.com/layday/instawow"
license = "GNU General Public License v3 (GPLv3)"
author = "layday"
author_email = "layday@protonmail.com"

[tool.briefcase.app.instawow-gui-wrapper]
formal_name = "instawow-gui"
description = "GUI for the World of Warcraft add-on manager instawow"
icon = "src/instawow_gui/resources/instawow_gui"
sources = ["src/instawow_gui_wrapper"]
requires = [
  "..[gui]",
  "certifi",
]

[tool.briefcase.app.instawow-gui-wrapper.macOS]
requires = [
  "std-nslog",
]

[tool.briefcase.app.instawow-gui-wrapper.linux]
linuxdeploy_plugins = [
  "DEPLOY_GTK_VERSION=3 gtk",
  "./linuxdeploy-plugin-zzzinstawowwebkit2gtk.sh",
]

[tool.briefcase.app.instawow-gui-wrapper.windows]
requires = [
  "clr-loader <2",
]
