[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
dynamic = [
  "version",
]
name = "instawow-gui"
requires-python = ">= 3.12"
description = "World of Warcraft add-on manager GUI"
license = "GPL-3.0-or-later"
authors = [{ name = "layday", email = "layday@protonmail.com" }]
urls."homepage" = "http://github.com/layday/instawow"

dependencies = [
  "instawow",
]
optional-dependencies."skeletal" = [
  "toga-core >= 0.4.5",
]
optional-dependencies."full" = [
  "toga >= 0.4.5",
]

[project.entry-points."instawow.plugins"]
"instawow_gui" = "instawow_gui._plugin"

[tool.hatch.build.targets.sdist]
only-include = [
  "/src/instawow_gui",
]
exclude = [
  ".gitignore",
]

[tool.hatch.build.targets.wheel]
packages = [
  "/src/instawow_gui",
]

[tool.hatch.version]
source = "vcs"
raw-options.root = ".."

[tool.briefcase]
project_name = "instawow-gui"
bundle = "org.instawow"
version = "0.1.0"

[tool.briefcase.app.instawow-gui-wrapper]
formal_name = "instawow-gui"
description = "GUI for the World of Warcraft add-on manager instawow"
icon = "src/instawow_gui/_resources/instawow_gui"
sources = ["src/instawow_gui_wrapper"]
requires = [
  "instawow-gui[full]",
]

[tool.briefcase.app.instawow-gui-wrapper.macOS]
universal_build = true
requires = [
  "std-nslog",
]

[tool.briefcase.app.instawow-gui-wrapper.linux]
requires = [
  # PyGObject 3.52.1 enforces a requirement on libgirepository-2.0-dev. This library
  # isn't available on Debian 12/Ubuntu 22.04. If you don't need to support those (or
  # older) releases, you can remove this version pin. See beeware/toga#3143.
  "pygobject < 3.52.1",
]

[tool.briefcase.app.instawow-gui-wrapper.linux.appimage]
manylinux = "manylinux_2_28"
system_requires = [
  # Needed to compile pycairo wheel
  "cairo-gobject-devel",
  # Needed to compile PyGObject wheel
  "gobject-introspection-devel",
  # Needed to provide GTK
  "gtk3-devel",
  # Dependencies that GTK looks for at runtime, that need to be
  # in the build environment to be picked up by linuxdeploy
  "libcanberra-gtk3",
  "PackageKit-gtk3-module",
  "gvfs-client",
]
linuxdeploy_plugins = [
  "DEPLOY_GTK_VERSION=3 gtk",
  "./linuxdeploy-plugin-zzzinstawowwebkit2gtk.sh",
]

[tool.briefcase.app.instawow-gui-wrapper.linux.flatpak]
finish_arg."filesystem=host" = true
flatpak_runtime = "org.gnome.Platform"
flatpak_runtime_version = "47"
flatpak_sdk = "org.gnome.Sdk"

[tool.briefcase.app.instawow-gui-wrapper.linux.system.debian]
system_requires = [
  # Needed to compile pycairo wheel
  "libcairo2-dev",
  # One of the following two packages are needed to compile PyGObject wheel. If you
  # remove the pygobject pin in the requires list, you should also change to the
  # version 2.0 of the girepository library. See beeware/toga#3143.
  "libgirepository1.0-dev",
  # "libgirepository-2.0-dev",
]
system_runtime_requires = [
  # Needed to provide GTK and its GI bindings
  "gir1.2-gtk-3.0",
  # One of the following two packages are needed to use PyGObject at runtime. If you
  # remove the pygobject pin in the requires list, you should also change to the
  # version 2.0 of the girepository library. See beeware/toga#3143.
  "libgirepository-1.0-1",
  # "libgirepository-2.0-0",
  # Dependencies that GTK looks for at runtime
  "libcanberra-gtk3-module",
  # Needed to provide WebKit2 at runtime
  # Note: Debian 11 requires gir1.2-webkit2-4.0 instead
  "gir1.2-webkit2-4.1",
]

[tool.briefcase.app.instawow-gui-wrapper.linux.system.rhel]
system_requires = [
  # Needed to compile pycairo wheel
  "cairo-gobject-devel",
  # Needed to compile PyGObject wheel
  "gobject-introspection-devel",
]
system_runtime_requires = [
  # Needed to support Python bindings to GTK
  "gobject-introspection",
  # Needed to provide GTK
  "gtk3",
  # Dependencies that GTK looks for at runtime
  "libcanberra-gtk3",
  # Needed to provide WebKit2 at runtime
  "webkit2gtk3",
]

[tool.briefcase.app.instawow-gui-wrapper.linux.system.suse]
system_requires = [
  # Needed to compile pycairo wheel
  "cairo-devel",
  # Needed to compile PyGObject wheel
  "gobject-introspection-devel",
]
system_runtime_requires = [
  # Needed to provide GTK
  "gtk3",
  # Needed to support Python bindings to GTK
  "gobject-introspection",
  "typelib(Gtk) = 3.0",
  # Dependencies that GTK looks for at runtime
  "libcanberra-gtk3-module",
  # Needed to provide WebKit2 at runtime
  "libwebkit2gtk3",
  "typelib(WebKit2)",
]

[tool.briefcase.app.instawow-gui-wrapper.linux.system.arch]
system_requires = [
  # Needed to compile pycairo wheel
  "cairo",
  # Needed to compile PyGObject wheel
  "gobject-introspection",
  # Runtime dependencies that need to exist so that the
  # Arch package passes final validation.
  # Needed to provide GTK
  "gtk3",
  # Dependencies that GTK looks for at runtime
  "libcanberra",
  # Needed to provide WebKit2
  "webkit2gtk",
]
system_runtime_requires = [
  # Needed to provide GTK
  "gtk3",
  # Needed to provide PyGObject bindings
  "gobject-introspection-runtime",
  # Dependencies that GTK looks for at runtime
  "libcanberra",
  # Needed to provide WebKit2 at runtime
  "webkit2gtk",
]
